test/src/e2e_vm_tests/test_programs/should_fail/recover_path_enum/src/main.sw
contract;

enum Enum {
    C1 : (),
}

fn recover_on_path() -> Enum {
    return Enum::;
}

fn recovery_witness() -> bool { 0 }
